  `infinit-user` and `infinit-volume`.
- Support `--pull` in combination with `--delete` to also remove
  entities from the hub in `infinit-drive`, `infinit-network`,
  `infinit-passport`, `infinit-user` and `infinit-volume`.
- Add Kelips batch requests, greatly improving performances for large
  set of files.
- Push storage stats to the hub in `infinit-network` if `--push` is
  passed.


## [0.5.5] - 2016-04-25

Automatic replication of under-replicated metadata blocks and CPU
usage improvement.

### Added

- Automatically rebalance under-replicated metadata blocks to new
  nodes.
- Synchronize file content on `fsync` system call.
- Cache the root block address locally to avoid recreating one if all
  storage nodes are down.
- Add `infinit-journal` binary to inspect asynchronous write queue.
- Add `infinit-connectivity` to test network connectivity
  capabilities.
- Publish public IP to beyond.

### Changed

- Shorten many logs for readability.
- Update OpenSSL to 1.0.2g for security fixes, although we are not
  vulnerable to DROWN attacks.
- Update Curl to 7.47.1 because why not.

### Fixed

- Fix IO error when performing `fsync` on an unlinked file.
- Fix infinite recursion on certain log levels.
- Remove immutable blocks cache on disk when the corresponding file is
  deleted.
- Fix SEGV when shutting down while deciphering a block.
- Handle conflicts when changing world permissions on a directory.
- Fix misreported file size upon `truncate` or `ftruncate`.
- Fixed async cache deadlock upon conflict on group blocks.
- Ensure prefetcher work in parallel on large directories.
- Report error if no servers are available to store data block.
- Fix race condition when connecting several time to a peer.


## [0.5.4] - 2016-03-01

Hotfix for disk performances, persistent disk cache for file contents.

### Added

- Implement `statfs` system call.
- Add a disk block cache for immutable file contents.
- Show linked network in `infinit-network --list`.

### Changed
